--- a/README.textile
+++ b/README.textile
@@ -14,8 +14,10 @@ h1. Rails Dependencies
 When using this plugin on the front end of a Rails 3 application, the server needs to be set up to properly accept and return JSON responses in a way that jquery.form can handle. There is a gem built to handle this:
 
 <pre>
+  <code>
   gem 'faxijaxy'
   gem 'faxijaxy', :git => 'http://github.com/sax/faxijaxy.git'
+  </code>
 </pre>
 
 h1. Usage
@@ -23,15 +25,18 @@ h1. Usage
 HTML:
 
 <pre>
+  <code>
   <script src="/javascripts/jquery-1.4.2.min.js" type="text/javascript"></script>
   <script src="/javascripts/form/jquery.form.js" type="text/javascript"></script>
   <script src="/javascripts/jquery.faxijaxy.js" type="text/javascript"></script>
   <script src="/javascripts/application.js" type="text/javascript"></script>
+  </code>
 </pre>
 
 Application.js:
 
 <pre>
+  <code>
   jQuery(document).ready(function(){
     // alter default text that appear for any file input
     jQuery.faxijaxy.init({handle : '(click here to upload)'});
@@ -50,6 +55,7 @@ Application.js:
     // ovewrite default and handle response
     jQuery.faxijaxy({handleTag: 'span'}, responseMethod);
   });
+  </code>
 </pre>
 
 h1. Settings & Defaults
@@ -57,6 +63,7 @@ h1. Settings & Defaults
 These are the available settings.
 
 <pre>
+  <code>
   jQuery.faxijaxy.settings = {
     wrapperTag : 'div',         // the tag that will wrap the input
     wrapperClass : 'file_ajax', // the class applied to the wrapper
@@ -65,19 +72,24 @@ These are the available settings.
     autoSubmit : true,          // submit form on selecting file
     dataType: 'json'            // json | script
   }
+  </code>
 </pre>
 
 Settings can be altered site-wide using the init method:
 
 <pre>
+  <code>
   jQuery.faxijaxy.init({
     wrapperTag : 'li',
     wrapperClass : null
   });
+  </code>
 </pre>
 
 Or they can be set when calling the plugin:
 
 <pre>
+  <code>
   jQuery.faxijaxy({autoSubmit: false});
+  </code>
 </pre>
